# oggify_csv

./: Cargo.toml  README.md
audio/src/: decrypt.rs  lewton_decoder.rs
core/: Cargo.toml
core/src/: lib.rs  session.rs  spotify_id.rs
core/src/connection/: mod.rs
metadata/src/: lib.rs
protocol/: files.rs
protocol/src/: authentication.rs  keyexchange.rs  mercury.rs  metadata.rs  pubsub.rs  spirc.rs
src/: main.rs
